--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "webpack",
     "start:dev": "webpack-dev-server"
   },
+  "browserslist": [
+    "> 1%",
+    "last 3 version"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,17 +19,21 @@
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@glidejs/glide": "^3.2.6",
+    "autoprefixer": "^9.4.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.1.3",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
